// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Header Alternative Header with search 1`] = `
Array [
  <input
    className="Header__MobileNavToggle-yf04b-7 iLTPBU"
    id="mobileMenuToggle"
    type="checkbox"
  />,
  <header
    className="Header__Bar-yf04b-0 dztHbG"
  >
    <div
      className="Header__AppName-yf04b-1 koOxbq"
    >
      App Name
    </div>
    <div
      className="Header__SearchContainer-yf04b-2 gTnCUW"
    >
      <div
        className="TextInput__Group-shde0o-0 eQdUQs"
        placeholder="Search for..."
        type="text"
      >
        <input
          className="TextInput__Input-shde0o-2 bjiVAr"
          id="search"
          placeholder="Search for..."
          type="text"
        />
        <div>
          <label
            className="TextInput__IconWrapper-shde0o-1 jnpZQG"
            htmlFor="search"
          >
            <span
              className="Icon__IconWrapper-xeqnbo-0 cOFzCH"
              color="#black"
              htmlFor="search"
            >
              <svg
                className="svg-inline--fa fa-undefined"
              />
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="Header__RightAlignedChildren-yf04b-3 jcJKCM"
    >
      <div
        className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
      >
        <div
          className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY Header__HeaderAvatar-yf04b-4 dXdcux"
          type="inverted"
        >
          <img
            className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
            src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
          />
          <div
            className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
            type="inverted"
          >
            <h3
              className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
              type="inverted"
            >
              John
            </h3>
          </div>
        </div>
      </div>
      <div
        className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
      >
        <a
          className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
          data-testid={null}
          onClick={[Function]}
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
          Logout
        </a>
      </div>
    </div>
    <label
      className="Header__MobileMenuToggle-yf04b-5 MDzZl"
      htmlFor="mobileMenuToggle"
    >
      <span
        className="Header__Hamburger-yf04b-6 bcNnmy"
      />
    </label>
  </header>,
  <div
    className="Header__MobileNavMenu-yf04b-8 ijOPuP"
  >
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <div
        className="Box__BoxWrapper-jr1api-0 hQZuIR"
        data-testid={null}
      >
        <div
          className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
          type="inverted"
        >
          <img
            className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
            src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
          />
          <div
            className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
            type="inverted"
          >
            <h3
              className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
              type="inverted"
            >
              John
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        onClick={[Function]}
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
        Logout
      </a>
    </div>
  </div>,
  <label
    className="Header__Overlay-yf04b-9 hDHdJu"
    htmlFor="mobileMenuToggle"
  />,
]
`;

exports[`Storyshots Components/Header Default Header 1`] = `
Array [
  <input
    className="Header__MobileNavToggle-yf04b-7 iLTPBU"
    id="mobileMenuToggle"
    type="checkbox"
  />,
  <header
    className="Header__Bar-yf04b-0 hHaPQo"
  >
    <div
      className="Header__AppName-yf04b-1 hDhBAM"
    >
      App Name
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 isqNRL StyledLink"
        data-testid={null}
        href="#"
      >
        Summary
      </a>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        href="#"
      >
        Find
      </a>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        href="#"
      >
        Visualisation
      </a>
    </div>
    <div
      className="Header__SearchContainer-yf04b-2 gTnCUW"
    />
    <div
      className="Header__RightAlignedChildren-yf04b-3 buPGJV"
    >
      <div
        className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
      >
        <a
          className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
          data-testid={null}
          href="#"
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
          Settings
        </a>
      </div>
      <div
        className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
      >
        <div
          className="Popover__Container-sc-1bwoak-0 fFsabD"
        >
          <div
            className="Popover__Text-sc-1bwoak-1 eREcMi"
            direction="bottom"
            width="160px"
          >
            Tenant: ci2153 Workspace: 20k-v5 [lb5ctx]  UI_Version: 8c315c2 [4412] Backend_Version: dabc261 [3578]
          </div>
          <div
            className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY Header__HeaderAvatar-yf04b-4 dXdcux"
            type="inverted"
          >
            <img
              className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
              src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
            />
            <div
              className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
              type="inverted"
            >
              <h3
                className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
                type="inverted"
              >
                John
              </h3>
            </div>
          </div>
        </div>
      </div>
      <div
        className="Spacer__SpacerBox-sc-1acikjz-0 iGoMbw"
      >
        <a
          className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
          data-testid={null}
          onClick={[Function]}
        >
          <span
            className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
          >
            <svg
              className="svg-inline--fa fa-undefined"
            />
          </span>
          Logout
        </a>
      </div>
    </div>
    <label
      className="Header__MobileMenuToggle-yf04b-5 MDzZl"
      htmlFor="mobileMenuToggle"
    >
      <span
        className="Header__Hamburger-yf04b-6 bcNnmy"
      />
    </label>
  </header>,
  <div
    className="Header__MobileNavMenu-yf04b-8 ijOPuP"
  >
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <div
        className="Box__BoxWrapper-jr1api-0 hQZuIR"
        data-testid={null}
      >
        <div
          className="Avatar__AvatarWrapper-sc-1wtet2j-0 jrXiJY"
          type="inverted"
        >
          <img
            className="Avatar__Image-sc-1wtet2j-2 eEfKKB"
            src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg"
          />
          <div
            className="Avatar__TextContent-sc-1wtet2j-1 irScUB"
            type="inverted"
          >
            <h3
              className="Typography__H3-sc-1613j99-2 Avatar__Title-sc-1wtet2j-4 exCJCn"
              type="inverted"
            >
              John
            </h3>
          </div>
        </div>
      </div>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 isqNRL StyledLink"
        data-testid={null}
        href="#"
      >
        Summary
      </a>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        href="#"
      >
        Find
      </a>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        href="#"
      >
        Visualisation
      </a>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        href="#"
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
        Settings
      </a>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 dlnFhc"
      display="block"
    >
      <a
        className="StyledLink__Hyperlink-sc-1beg6q3-1 StyledLink-sc-1beg6q3-0 iIIczX StyledLink"
        data-testid={null}
        onClick={[Function]}
      >
        <span
          className="Icon__IconWrapper-xeqnbo-0 kzKQCj"
        >
          <svg
            className="svg-inline--fa fa-undefined"
          />
        </span>
        Logout
      </a>
    </div>
  </div>,
  <label
    className="Header__Overlay-yf04b-9 hDHdJu"
    htmlFor="mobileMenuToggle"
  />,
]
`;
